@startuml database-erd
' MemForce on-device SQLite schema.
' Source of truth: app/src/main/java/com/memforce/db/MemForceDbHelper.java (onCreate)
' Identifiers resolved through app/src/main/java/com/memforce/db/DbContract.java.
' The entity tables implement android.provider.BaseColumns, so the key column is "_id", not "id".

hide circle
' polyline keeps each ON DELETE label attached to its own edge; ortho routing
' strands them against the right margin on this graph.
skinparam linetype polyline
skinparam shadowing false
skinparam roundcorner 4
skinparam class {
  BackgroundColor White
  BorderColor #444444
  ArrowColor #333333
}

title MemForce - on-device SQLite schema (memforce.db, DATABASE_VERSION 2)

' ============================ identity / auth ============================
together {
  entity "users" as users <<global>> {
    * _id : INTEGER <<PK>> <<AUTOINCREMENT>>
    --
    * name : TEXT <<UNIQUE, NOCASE>>
    * password_hash : TEXT
    * salt : TEXT
  }
}

' ============================ content ============================
together {
  entity "questions" as questions <<global>> {
    * _id : INTEGER <<PK>> <<AUTOINCREMENT>>
    --
    * name : TEXT
    answer : TEXT <<nullable>>
  }

  entity "tags" as tags <<global>> {
    * _id : INTEGER <<PK>> <<AUTOINCREMENT>>
    --
    * name : TEXT <<UNIQUE, NOCASE>>
  }

  entity "alternative_answers" as alternative_answers <<global>> {
    * _id : INTEGER <<PK>> <<AUTOINCREMENT>>
    --
    * question_id : INTEGER <<FK>>
    * answer : TEXT <<UNIQUE per question, NOCASE>>
  }
}

' ============================ junction / bridge ============================
together {
  entity "question_tags" as question_tags <<junction>> {
    * question_id : INTEGER <<PK>> <<FK>>
    * tag_id : INTEGER <<PK>> <<FK>>
    --
    composite PK (question_id, tag_id)
  }
}

' ============================ relationships ============================
' Both junction columns are NOT NULL, so both parent sides are mandatory.
questions ||--o{ question_tags : "ON DELETE CASCADE"
tags      ||--o{ question_tags : "ON DELETE CASCADE"
questions ||--o{ alternative_answers : "ON DELETE CASCADE"

' ============================ notes ============================
legend bottom
  <b>Notation</b>  Crow's foot.  || = exactly one   |o = zero or one   o{ = zero or many
  <b>*</b> = mandatory (NOT NULL).  _id is an INTEGER PRIMARY KEY (rowid alias) and can never hold NULL.
  --
  <b>Explicit indexes</b>
  idx_question_tags_tag          ON question_tags(tag_id)
  idx_alternative_answers_answer ON alternative_answers(question_id, answer COLLATE NOCASE)  UNIQUE
  --
  <b>Alternative answers</b>  Further wordings of questions.answer that the game accepts as
  correct as well. The row order is the ascending _id, which is the order they were stored in.
  --
  <b>Scope</b>  Every table is global; no table carries a user_id, so all content is shared by
  every user. users has no foreign key relationship to any other table; it backs sign-in only.
  --
  <b>Runtime dependency</b>  No FK action above is enforced by the schema alone.
  MemForceDbHelper.onConfigure() calls setForeignKeyConstraintsEnabled(true);
  without it SQLite defaults PRAGMA foreign_keys = OFF and every CASCADE is inert.
  --
  No table declares a DEFAULT. No table is WITHOUT ROWID.
endlegend

@enduml
